  problems ... for example, im_plotmask() used as the action operator for
  im_fastlineuser() is terrible
- instead, users of the inplace operations need to call im_invalidate() at the
  end of a set of paint actions to trigger an update
- parent/child -> upstream/downstream in DAG
- set VIPS_ICC_DIR in configure
- ICC profiles are looked for in VIPS_ICC_DIR as a fallback

15/1/10 started 7.21.1
- added "written" callbacks, used to implement write to non-vips formats

26/11/09 started 7.21.0
- branch for new dev cycle
- argh, missing init from colour.c (thanks Peter)
- argh, im_measure() was not looping over bands correctly (thanks Peter)
- removed mmap_limit, we now always use windows ... reduces VM use hugely,
  because mmap windows are freed when their regions are freed, while images
  are only unmapped when they are closed
- have a min bytes for mmap windows as well, so we don't make too many tiny
  windows
- im_disp2Lab() was broken
- deprecated.h is now defined in terms of current functionality, rather than
  repeating stuff
- im_flood() and friends rewritten, typically 4x faster
- removed --with-cimg option, added --disable-cxx
- added im_system_image() (thanks Roland)
- added postclose callbacks
- added vipsthumbnail 
- oops, generate C++/Python wrappers for deprecated operations by default
- read TIFF images strip-wise, not scanline-wise
- better TIFF YCbCr reading (thanks Ole)
- isanalyze generates fewer silly error messages

26/11/09 started 7.20.3
- updated en_GB.po translation 
- file_length is gint64 to avoid win32 breakage

23/11/09 started 7.20.2
- GETTEXT_PACKAGE now includes lib version number (thanks Jay)

11/11/09 started 7.20.1
- oop, im_clip2fmt() was missing PTOP flag, should get a small speedup
- im_conv() / im_convf() didn't like all-zero masks
- small updates to im_convf() from im_conv()
- im_read_imask() produced an incorrect error message if passed a doublemask
- rename im_convf(), im_convsepf() as _f()